--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -86,6 +86,9 @@ cos:
     secretKey: xxx
     region: xxx
     bucket: xxx
+# 代码沙箱配置
+codesandbox:
+  type: remote
 # 接口文档配置
 knife4j:
   enable: true
